tests/paczka1/fuzzy1/41757516.err
Error in line 8: 5Oa678 S807 9,3
Error in line 1: ZImkSGD S807 63,5
Error in line 16: 5Oa678 A194 77,1
Error in line 21: 5Oa678 S406 71,9
Error in line 13: oqLoDhy9sK A859 96,9
Error in line 28: oqLoDhy9sK S406 55,7
Error in line 23: ZImkSGD A194 13,7
Error in line 31: PWtj S807 26,3
